test/zinc_source/compile_errors/enums/07_non_exhaustive_match.zn
// expected-error: non-exhaustive match for enum 'Message'
enum Message {
    Quit
    Move { x: i32, y: i32 }
}

fn main() {
    msg = Message.Quit
    match msg {
        Message.Quit => {
            print("quit")
        },
    }
}
